@@ -10,8 +10,10 @@
 
 def run(win):
     linenums = win.document.getSelectionLines()
+    win.document.BeginUndoAction()
     for i, linenum in enumerate(linenums):
         text = str(i+1).ljust(6) + win.document.getLineText(linenum)
         win.document.replaceLineText(linenum, text)
+    win.document.EndUndoAction()
 
 run(win)
